<chore>: update application response (#144)
* <fix/request>: change body type in create campaign feature

* <chore>: config timezone<fix/campaign>: update campaign model and mongo config

* <chore>: fix constructor & atrribute in campaign

* <feat>: system message

* <deployed>: compile file build

* <fix>: request part and parse obj in campagin

* <feat/trigger-profile>: auto create profile if not existed

* <fix/updated>: update find by status in campaign

* <feat/campaign>: add some condition in update campaign

* <chore>: update application response